8280454: G1: ClassLoaderData verification keeps CLDs live that causes problems with VerifyDuringGC during Remark